add verbose log when test start